2011-01-12  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* testutilities.tcl (snitTooManyArgs): Fixed error messages for
	  snit 1.x series.

2010-09-15  Andreas Kupries  <andreask@activestate.com>

	* testutilities.tcl: [Bug 3066026]: Moved the tcltest
	compatibility initialization into a procedure (InitializeTcltest)
	which is called by testNeedsTcltest and a few other places to be
	done only after we are sure that the tcltest package is present.

2010-03-12  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* testutilities.tcl: Added constraint for 8.4-.

2009-09-24  Andreas Kupries  <andreask@activestate.com>

	* testutilities.tcl: Added constraint for 8.6+.

2009-04-13  Andreas Kupries  <andreask@activestate.com>

	* dialog.tcl: Extended to allow dialog over a socket secured by
	  SSL (via package tls).

2009-04-10  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* ca.crt: New files, SSL/TLS certificates for use in testsuites.
	* ca.key: ca.* = Tcllib Certification Authority
	* ca.key.password: Receiver, Transmitter = Certificates for two
	* receiver.crt: sides of a communication channel.
	* receiver.key:
	* transmitter.crt:
	* transmitter.key:

	* README: Acknowledgement added for the SimpleCA software used to
	  create the certificates.

2008-09-20  Michael Schlenker <mic42@users.sourceforge.net>

	* testutitlites.tcl: Added wrong num args error messages for
	  Tcl 8.6 alphas, to make tests pass.

2007-04-30  Andreas Kupries  <andreask@activestate.com>

	* testutilities.tcl: Made TestFiles 8.2-ready. Added command
	  'TestFilesGlob' to simply return files instead of immediately
	  sourcing them.

2007-04-11  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* testutilities.tcl: Added 'TestFiles', a command to run a set of
	  subordinate test files, found by globbing.

	* testutilities.tcl: Added 'useAccel' to help with the setup of
	  packages which have accelerators, automatically using the proper
	  use variant.
